 Otherwise indicated differently, all changes made by 
     Jelmer Vernooij.

Ctrlproxy 3.0.6 UNRELEASED

  IMPROVEMENTS

    * Add report-time-offset setting.
	
	* New settings ``port'', ``linestack'', ``logging'', ``password'',
	  ``default-network''.

	* Simplify files in networks/ further by storing keys in ~/.ctrlproxy/keys 
	  and having a list of channels to autojoin. (#76)

    * Only update autojoin settings when ctrlproxy is completely logged in. 
	  (#113)

  BUG FIXES

    * Don't "forget" listener password.

	* Don't add all existing networks to autoconnect list. (#90)

	* Fix a couple of minor memory leaks.

	* Store CTCP ACTIONs for replication.

	* Warn about unknown networks listed for listeners rather than crash.

Ctrlproxy 3.0.5 2007-12-07

  IMPROVEMENTS
  
    * Integrate auto-away module into the core.

    * New settings ``autosave'', ``replication'', ``learn-nickserv'', 
      ``learn-network-name'', ``admin-log'', ``admin-user''.

    * Warn about unknown configuration file settings. (#15)

    * Support prefixing all lines with the time ("report-time = always"). (#169)

    * Allow using expansions in log file names for irssi. (#149)

  BUG FIXES

    * Handle 275 response correctly.

    * Fix memory error. (#170)

    * Fix several memory leaks.

Ctrlproxy 3.0.4 2007-11-24

  IMPROVEMENTS

    * Add ctrlproxy-admin command for command-line access to the admin network.

    * Send message to the client when ctrlproxy connects to the network.

    * Announce number of clients/channels during client login. (#162)

    * Add "set" command in the administration interface, including 
      initial settings "log_level", "motd-file" and "report-time". (#6)

    * Add "default-network" setting.

  BUG FIXES
    
    * Don't allow disconnect of admin network. (#164)

    * Clearer error messages during disconnect.

    * Handle ping timeouts from server. (#158)

    * Don't crash when network of listener goes away. (#168)
